Added pause menu

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7FCBA03547CE298A26B1D18A5050F127
+ProjectName=Breakout Clone
+Description=Simple clone of the game Breakout made to familiarize with UE collisions
+CompanyName=epoHless
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "71DB7A2044C2FF8B813539BE8DED8DCE", "Breakout Clone")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "7A0F2A064907C60CA809BAB1CDD2FC4E", "Breakout Clone")
+bUseBorderlessWindow=True
+
